2006-02-27  Christopher Faylor  <cgf@timesys.com>

	* include/sys/termios.h (cfsetispeed): Just define as a function rather
	than resorting to a macro.
	(cfsetospeed): Ditto.

2006-02-27  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc: Fix a comment.

2006-02-27  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::release): Add a comment.

2006-02-27  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_netdrive.cc (fhandler_netdrive::fstat): Create unambiguous
	inode number.
	(fhandler_netdrive::readdir): Ditto.

2006-02-24  Christopher Faylor  <cgf@timesys.com>

	* sigproc.cc (sigheld): Define new variable.
	(sig_dispatch_pending): Don't check sigq since that's racy.
	(sig_send): Set sigheld flag if __SIGHOLD is specified, reset it if
	__SIGNOHOLD is specified.  Ignore flush signals if we're holding
	signals.

2006-02-23  Christopher Faylor  <cgf@timesys.com>

	* cygwin.din (_exit): Use signal front end.
	(exit): Ditto.

2006-02-23  Christopher Faylor  <cgf@timesys.com>

	* winsup.h (cygwin_hmodule): Declare.
	* exceptions.cc (inside_kernel): Reverse return values to reflect
	function name.  Return true if we're in cygwin1.dll or if we're
	executing in dll_entry.
	(_cygtls::interrupt_now): Reflect reversal of inside_kernel return
	value.
	* hookapi.cc (cygwin_hmodule): Remove declaration.
	* init.cc (dll_entry): Use in_dllentry global to record that we are
	executing in dllentry.

2006-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::interrupt_now): Reorder conditional
	to call inside_kernel only if this isn't locked.

2006-02-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Add FILE_READ_ATTRIBUTES to
	access flags in case of query_read_control case, add FILE_READ_DATA
	in case of query_stat_control.

2006-02-20  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (av::fixup): Check for .bat and friends specifically now
	since these extensions are no longer automatically detected.
